--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://mldangelo.com/",
+  "homepage": "https://waupelani.github.io/npeople",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mldangelo/personal-site.git"
+    "url": "https://github.com/waupelani/npeople.git"
   },
   "scripts": {
     "build": "rimraf ./build && react-scripts build",
@@ -22,7 +22,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "0.1.14",
     "dayjs": "^1.10.4",
-    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "raw.macro": "^0.4.2",
@@ -45,13 +44,14 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "gh-pages": "^3.2.3",
     "source-map-explorer": "^2.5.2"
   },
   "browserslist": {
     "production": [
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -60,7 +60,7 @@
       "last 1 safari version",
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ]
   }
